squash! fix: fix img loader svg width on page load
Get rid of the `justify-items: self` declaration in index.module.css
and set the justify, align or place self properties on each individual
item within the carousel container instead.
This fixes the bug where the width of image loading svg was smaller
than it should have been on initial page load.

--- a/src/components/Carousel/CarouselDots.module.css
+++ b/src/components/Carousel/CarouselDots.module.css
@@ -1,4 +1,5 @@
 .carousel-dots-container {
+    justify-self: center;
     align-self: end;
     margin-bottom: 1.5em;
     z-index: 1;
